fixed announcement and trending stretching when adding articles

--- a/style.css
+++ b/style.css
@@ -303,11 +303,9 @@ body {
 /* ANNOUNCEMENTS */
 
 .announcements-content {
-    padding: 20px;
-}
-
-.announcements-content > div {
-    margin-bottom: 20px;
+    padding: 30px;
+    display: grid;
+    align-items: center;
 }
 
 .line {
@@ -320,6 +318,7 @@ body {
 .trending-content {
     display: grid;
     grid-template-columns: 1fr 3fr;
+    align-items: center;
     gap: 20px;
     align-items: center;
     padding: 20px;
